--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="_7_0">7.0 %</string>
     <string name="_6_0">6.0 %</string>
     <string name="_5_8">5.8 %</string>
+    <string name="science_quiz">Science Quiz</string>
 </resources>
